he añadido la página de estudiantes y añadido su css correspondiente

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <nav class="barra_principal">
       <ul class="menu-centro">
         <li><a href="#">Acerca de</a></li>
-        <li><a href="descarga-launcher">Descargar launcher</a></li>
+        <li><a href="descarga-launcher.html">Descargar launcher</a></li>
+        <li><a href="estudiantes.html">Creado por estudiantes</a></li>
       </ul>
 
       <!-- Botón hamburguesa -->
