He añadido contenido
Contenido de los hero

--- a/descarga-launcher.html
+++ b/descarga-launcher.html
@@ -45,8 +45,10 @@
   </header>
 
   <main>
-<section id="instalar-launcher">
-  <h2>Instalación del Launcher</h2>
+    <div class="hero-launcher"></div>
+    <section id="instalar-launcher">
+      
+      <h2>Instalación del Launcher</h2>
 
   <!-- sección descarga -->
   <article>
