--- a/estudiantes.html
+++ b/estudiantes.html
@@ -50,10 +50,9 @@
 <main>
 <section id="estudiantes">
     
-<div class="hero">
-  <h2>Creado por estudiantes</h2>
-</div>
+<div class="hero"></div>
 
+<h2>Creado por estudiantes</h2>
 
 
   <!-- seccion estudiantes aplicación -->
