--- a/contenido/descarga-launcher.html
+++ b/contenido/descarga-launcher.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Launcher simuladores</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body>
@@ -22,7 +22,7 @@
 
       <!-- Botón hamburguesa -->
       <button class="toggle-btn" aria-label="Abrir menú">
-        <img src="Davante_simbolo_white.png" alt="Menú">
+        <img src="../images/Davante_simbolo_white.png" alt="Menú">
       </button>
     </nav>
 
@@ -54,8 +54,8 @@
   <!-- sección descarga -->
   <article>
     <figure>
-      <a href="descarga.png" target="_blank" rel="noopener">
-        <img src="descarga.png" alt="Descargar el launcher" loading="lazy">
+      <a href="../images/descarga.png" target="_blank" rel="noopener">
+        <img src="../images/descarga.png" alt="Descargar el launcher" loading="lazy">
       </a>
       <figcaption>1. Descargar el Launcher</figcaption>
     </figure>
@@ -65,8 +65,8 @@
   <!-- sección instalación -->
   <article>
     <figure>
-      <a href="instalar.png" target="_blank" rel="noopener">
-        <img src="instalar.png" alt="Instalar el simulador deseado" loading="lazy">
+      <a href="../images/instalar.png" target="_blank" rel="noopener">
+        <img src="../images/instalar.png" alt="Instalar el simulador deseado" loading="lazy">
       </a>
       <figcaption>2. Instalar el simulador deseado</figcaption>
     </figure>
@@ -76,8 +76,8 @@
   <!-- sección actualizacion -->
   <article>
     <figure>
-      <a href="actualizacion.png" target="_blank" rel="noopener">
-        <img src="actualizacion.png" alt="Comprobar actualizaciones" loading="lazy">
+      <a href="../images/actualizacion.png" target="_blank" rel="noopener">
+        <img src="../images/actualizacion.png" alt="Comprobar actualizaciones" loading="lazy">
       </a>
       <figcaption>3. Comprobar si hay actualizaciones</figcaption>
     </figure>
