--- a/contenido/index.html
+++ b/contenido/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Launcher simuladores</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body>
@@ -22,7 +22,7 @@
 
       <!-- Botón hamburguesa -->
       <button class="toggle-btn" aria-label="Abrir menú">
-        <img src="Davante_simbolo_white.png" alt="Menú">
+        <img src="../images/Davante_simbolo_white.png" alt="Menú">
       </button>
     </nav>
 
