--- a/contenido/descarga-launcher.html
+++ b/contenido/descarga-launcher.html
@@ -49,7 +49,7 @@
     <section id="instalar-launcher">
       <div class="hero-launcher"></div>
       
-      <h2>Instalación del Launcher</h2>
+      <h2 class="guia-instalacion">Guía de instalación</h2>
 
   <!-- sección descarga -->
   <article>
