--- a/contenido/estudiantes.html
+++ b/contenido/estudiantes.html
@@ -52,7 +52,7 @@
 
     
 <div class="hero"></div>
-<h2>Creado por estudiantes</h2>
+<h2 class="creado-estudiantes">Creado por estudiantes</h2>
 
   <!-- seccion estudiantes aplicación -->
 
